<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"		
    android:orientation="vertical" 	
    android:background="@drawable/m_bg" 
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/small_list_bg"
        android:orientation="vertical" >
		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="网络水表配置器(双工)"
	        android:textColor="@color/white"
	        android:textSize="24dp" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/m_s_layout"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.70"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:background="@drawable/m_s_selector"
                    android:orientation="horizontal" >
					<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:gravity="center"
	                    android:orientation="horizontal" >
	                    <ImageView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_margin="2dp"
	                        android:scaleType="matrix"
	                        android:src="@drawable/m_s_pic" />
	                     
	                </LinearLayout>
	                <LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="5dp"
	                    android:layout_marginRight="10dp"
	                    android:gravity="center"
	                    android:orientation="vertical" >
	                    <TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/m_s"
	                        android:textColor="@color/white"
	                        android:textSize="20dp" />
	                	<TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="抄表人员/稽查人员"
	                        android:textColor="@color/white"
	                        android:textSize="12dp" />
	                </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/m_b_layout"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:background="@drawable/m_b_selector"
                    android:orientation="horizontal" >
					<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:gravity="center"
	                    android:orientation="horizontal" >
	                    <ImageView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_margin="2dp"
	                        android:scaleType="matrix"
	                        android:src="@drawable/m_b_pic" />
	                </LinearLayout>
	                <LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginRight="10dp"
	                    android:gravity="center"
	                    android:orientation="vertical" >
	                    <TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/m_b"
	                        android:textColor="@color/white"
	                        android:textSize="20dp" />
	                	<TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="抄表人员/稽查人员"
	                        android:textColor="@color/white"
	                        android:textSize="12dp" />
	                </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_right_layout"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/m_d_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/m_d_layout"
                    android:layout_width="match_parent"
                    android:layout_height="124dp"
                    android:background="@drawable/m_d_selector"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:scaleType="matrix"
                        android:src="@drawable/m_d_pic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m_d"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/m_h_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/m_h_selector"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:scaleType="matrix"
                        android:src="@drawable/m_h_pic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m_h"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/m_i_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@drawable/m_i_selector"
            android:orientation="horizontal" >
			
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
             	<ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:scaleType="matrix"
	                android:src="@drawable/m_i_pic" />
             	
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="vertical" >
             	<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_i"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="安装人员/校换人员"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="伟岸"
		    android:textColor="@color/white"
		    android:textSize="18dp" />
		<TextView
		    android:id="@+id/cpright"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="测器  Copyright 2015-2019"
		    android:textColor="@color/white"
		    android:textSize="12dp" />
		
	</LinearLayout>
    </LinearLayout>
	
</LinearLayout>